# Automated-Relationship-Graph-with-DICAT-Database

./: README.md
Graph/: Neo4j.ipynb  Pyvis.ipynb  Pyvis2.ipynb  PyvisFinal.ipynb
Others/: CosmePerezAnalysis.ipynb
Prompting/: DicatCSVJuanRana_cleaned.csv  Prompting.ipynb  ideas.txt  introduccion.txt  main.ipynb  pyproject.toml  requirements.txt
Prompting/code/: charts.ipynb  ner_extraction.ipynb  relation_extraction.ipynb  sentence_extraction.ipynb  text_analysis.ipynb
Prompting/code/tests/: frases_introduccion.txt  test_extractions.ipynb  text_clarifications.ipynb
Prompting/data/: DicatCSVJuanRana_cleaned.csv  DicatJuanRana.csv  DicatJuanRana_w_clarified_sentences.csv  DicatJuanRana_w_clarified_sentences_2.0.csv  DicatJuanRana_w_clarified_sentences_old.csv  DicatJuanRana_w_sentences.csv  historia_juan_rana.txt  ideas.txt
Prompting/notebooks/: charts.ipynb  relation_extraction.ipynb  text_analysis.ipynb
Prompting/notebooks/tests/: text_clarifications.ipynb
Supervised Models/KnowLG/: knowlg.ipynb
Supervised Models/LSR/: LSR.ipynb
Supervised Models/Rebel Model/: rebel_model.ipynb  triplets_output.csv
Supervised Models/Rebel Model/visualizations/: mrebel_network.html  rebel_network.html
Symbolic/: EjecucionesCompletas.ipynb  EjecucionesValidacion.ipynb  EjecucionesValidacionAnual.ipynb  extractor_relaciones.py  reglas regex.ipynb  relaciones_spacy_clarified.csv  relaciones_stanza.csv  requirements.txt  simbolico.ipynb
