[project]
name = "prompting"
version = "1.0.0"
requires-python = "==3.12.11"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "asttokens==3.0.0",
    "blis==1.2.1",
    "catalogue==2.0.10",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "click==8.1.8",
    "cloudpathlib==0.21.1",
    "colorama==0.4.6",
    "comm==0.2.2",
    "confection==0.1.5",
    "cupy-cuda12x==12.3.0",
    "cymem==2.0.11",
    "debugpy==1.8.14",
    "decorator==5.2.1",
    "distro==1.9.0",
    "dotenv==0.9.9",
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "es_core_news_lg @ https://github.com/explosion/spacy-models/releases/download/es_core_news_lg-3.8.0/es_core_news_lg-3.8.0-py3-none-any.whl",
    "es_core_news_md @ https://github.com/explosion/spacy-models/releases/download/es_core_news_md-3.8.0/es_core_news_md-3.8.0-py3-none-any.whl",
    "executing==2.2.0",
    "fastrlock==0.8.3",
    "greenlet==3.2.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "ipykernel==6.29.5",
    "ipython==9.2.0",
    "ipython_pygments_lexers==1.1.1",
    "jedi==0.19.2",
    "Jinja2==3.1.6",
    "jiter==0.10.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jupyter_client==8.6.3",
    "jupyter_core==5.7.2",
    "langchain==0.3.25",
    "langchain-core==0.3.60",
    "langchain-openai==0.3.17",
    "langchain-text-splitters==0.3.8",
    "langcodes==3.5.0",
    "langgraph==0.4.5",
    "langgraph-checkpoint==2.0.26",
    "langgraph-prebuilt==0.1.8",
    "langgraph-sdk==0.1.69",
    "langsmith==0.3.42",
    "language_data==1.3.0",
    "marisa-trie==1.2.1",
    "markdown-it-py==3.0.0",
    "MarkupSafe==3.0.2",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "murmurhash==1.0.13",
    "nest-asyncio==1.6.0",
    "numpy==1.26.4",
    "openai==1.79.0",
    "orjson==3.10.18",
    "ormsgpack==1.9.1",
    "packaging==24.2",
    "pandas==2.2.3",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "platformdirs==4.3.8",
    "preshed==3.0.9",
    "prompt_toolkit==3.0.51",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure_eval==0.2.3",
    "pydantic==2.11.4",
    "pydantic_core==2.33.2",
    "Pygments==2.19.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "pytz==2025.2",
  # "pywin32==310",
    "PyYAML==6.0.2",
    "pyzmq==26.4.0",
    "regex==2024.11.6",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "rich==14.0.0",
    "setuptools==80.8.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smart-open==7.1.0",
    "sniffio==1.3.1",
    "spacy==3.8.7",
    "spacy-legacy==3.0.12",
    "spacy-loggers==1.0.5",
    "SQLAlchemy==2.0.41",
    "srsly==2.5.1",
    "stack-data==0.6.3",
    "tenacity==9.1.2",
    "thinc==8.3.4",
    "tiktoken==0.9.0",
    "tornado==6.5",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typer==0.15.4",
    "typing-inspection==0.4.0",
    "typing_extensions==4.13.2",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "wasabi==1.1.3",
    "wcwidth==0.2.13",
    "weasel==0.4.1",
    "wheel==0.45.1",
    "wrapt==1.17.2",
    "xxhash==3.5.0",
    "zstandard==0.23.0"
]
